persist visible nav menu items in session and reset when logging in/out; refs #26920